--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -32,3 +32,10 @@ jobs:
         key: go-mod-v1-{{ checksum "go.sum" }}
         paths:
           - "/go/pkg/mod"
+
+    - store_artifacts: # Upload test summary for display in Artifacts
+        path: /tmp/test-results
+        destination: raw-test-output
+
+    - store_test_results:
+        path: /tmp/test-results
