update circleCI config

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -16,6 +16,12 @@ jobs:
     - restore_cache:
         keys:
           - go-mod-v1-{{ checksum "go.sum" }}
+          -
+    # Install dependency
+    - run:
+        name: Install Package
+        command: |
+          go get -d
 
     # Test
     - run:
