recover from test codes

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -28,11 +28,11 @@ jobs:
     - run:
         name: Install Package
         command: |
-          go get github.com/go-redis/redis
-          go get github.com/spf13/viper
-          go get github.com/onsi/ginkgo
-          go get github.com/onsi/gomega
-          go get -d .
+#          go get github.com/go-redis/redis
+#          go get github.com/spf13/viper
+#          go get github.com/onsi/ginkgo
+#          go get github.com/onsi/gomega
+          go get -u
 
 #    # Test
 #    - run:
