--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -7,7 +7,7 @@ jobs:
     docker:
     - image: circleci/golang:1.12
 
-    working_directory: /go/src/github.com/NBCFB/Dragonfly
+    working_directory: /Dragonfly
 
     environment: # environment variables for the build itself
       TEST_RESULTS: /tmp/test-results # path to where test results will be saved
