--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -14,6 +14,13 @@ jobs:
     steps:
     - checkout
 
+    # Install tools
+    - run:
+      name: install tools
+      command: |
+        apt-get update && apt-get install -y redis-tools
+        echo "CONFIG SET save ''" | redis-cli -x
+
     # Log the current branch
     - run:
         name: Show current branch
