add redis support

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -17,7 +17,7 @@ jobs:
     - run:
         name: install tools
         command: |
-          apt-get install -y redis-tools
+          sudo apt-get install -y redis-tools
 
     # Log the current branch
     - run:
