--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -32,12 +32,12 @@ jobs:
         name: Run redis
         command: redis-cli ping
 
-#    # Test
-#    - run:
-#        name: Run test
-#        command: |
-#          mkdir -p ${TEST_RESULTS} # Make test result folder
-#          go test -v . | tee $TEST_RESULTS/go-test.out
+    # Test
+    - run:
+        name: Run test
+        command: |
+          mkdir -p ${TEST_RESULTS} # Make test result folder
+          go test -v . | tee $TEST_RESULTS/go-test.out
 
     - save_cache:
         key: go-mod-v1-{{ checksum "go.sum" }}
