--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -36,15 +36,15 @@ jobs:
     
     - name: Run test
       run: |
-        sudo mkdir -p /tmp/test_results
-        sudo mkdir -p /artifacts
-        go test -v . -coverprofile=c.out | tee /tmp/test_results/go-test.out
+        mkdir -p ~/tmp/test_results
+        mkdir -p ~/artifacts
+        go test -v . -coverprofile=c.out | tee ~/tmp/test_results/go-test.out
         go tool cover -html=c.out -o coverage.html
-        sudo mv coverage.html /artifacts/.
+        sudo mv coverage.html ~/artifacts/.
     
     - name: Upload artifact
       uses: actions/upload-artifact@v1
       with:
         name: dragonfly-test-results
-        path: /artifacts
+        path: ~/artifacts
 
