--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -46,5 +46,5 @@ jobs:
       uses: actions/upload-artifact@v1
       with:
         name: dragonfly-test-results
-        path: ~/artifacts
+        path: artifacts
 
